test: set security manager off via ES_JAVA_OPTS