@@ -87,7 +87,6 @@ public class SgctlTest {
                 .singleNode()
                 .sslEnabled(TEST_CERTIFICATES)
                 .nodeSettings("entitlements.enabled", "false")
-                .jvmArgs("-Djava.security.manager=")
                 .useExternalProcessCluster()
                 .start();
 
