@@ -51,7 +51,6 @@ public class MigrateConfigTest {
                 .sslEnabled()
                 .enterpriseModulesEnabled()
                 .nodeSettings("entitlements.enabled", "false")
-                .jvmArgs("-Djava.security.manager=")
                 .useExternalProcessCluster()
                 .start();
     }
