@@ -44,7 +44,6 @@ public class MoveSearchGuardIndexCommandTest {
         try (LocalCluster cluster = new LocalCluster.Builder()
                 .singleNode()
                 .sslEnabled(TEST_CERTIFICATES)//
-                .jvmArgs("-Djava.security.manager=")//
                 .useExternalProcessCluster()//
                 .nodeSettings("entitlements.enabled", "false")//
                 .start()) {
